--- a/website/docs/tailwindcss/tailwind-core.mdx
+++ b/website/docs/tailwindcss/tailwind-core.mdx
@@ -11,8 +11,8 @@ sidebar_position: 3
 - UnoCSS 灵活得像乐高：任意规则、任意 preset，但 merge/类型提示要自己兜底，团队需要有人养规则库；适合愿意自定义、且已有内部 preset 的团队。
 
 > 深入阅读：
-> - [Tailwind vs UnoCSS 对比](tailwindcss/tailwind-vs-unocss)
-> - [tailwind-merge、cva、tailwind-variants 精要](tailwindcss/merge-and-variants)
+> - [Tailwind vs UnoCSS 对比](./tailwind-vs-unocss)
+> - [tailwind-merge、cva、tailwind-variants 精要](./merge-and-variants)
 
 ## 核心特性速览（顺便说说坑）
 
