--- a/website/docs/tailwindcss/index.mdx
+++ b/website/docs/tailwindcss/index.mdx
@@ -45,8 +45,9 @@ import TabItem from '@theme/TabItem'
 1. [历史与组件库演进](tailwindcss/history)
 2. [Tailwind 设计理念与对比](tailwindcss/tailwind-core)
 3. [原子化 CSS 最佳实践](tailwindcss/best-practices)
-4. [AI 友好提示与 Demo 运行指南](tailwindcss/ai-friendly-and-demos)
-5. [各样式方案 Demo 与产物对照](tailwindcss/demos)
+4. [样式隔离方案与原理](tailwindcss/style-isolation)
+5. [AI 友好提示与 Demo 运行指南](tailwindcss/ai-friendly-and-demos)
+6. [各样式方案 Demo 与产物对照](tailwindcss/demos)
 
 ## React/Vue 代码快速预览
 
