--- a/website/docs/tailwindcss/demos.mdx
+++ b/website/docs/tailwindcss/demos.mdx
@@ -111,7 +111,7 @@ export function Card() {
 
 ### Vue `<style scoped>`
 
-```vue
+```html
 <template>
   <section class="card">
     <p class="eyebrow">Scoped CSS</p>
@@ -187,7 +187,7 @@ export function TailwindCard() {
   </TabItem>
   <TabItem value="vue" label="Vue">
 
-```vue
+```html
 <template>
   <section class="grid gap-3 rounded-2xl border bg-card/80 p-4 shadow-sm">
     <p class="text-xs uppercase tracking-[0.2em] text-muted-foreground">Tailwind</p>
@@ -232,7 +232,7 @@ export function HeadlessCard() {
   </TabItem>
   <TabItem value="vue" label="Vue">
 
-```vue
+```html
 <script setup lang="ts">
 import { buttonVariants } from '@/components/ui/button'
 import { cn } from '@/lib/utils'
