--- a/website/docs/tailwindcss/ai-friendly-and-demos.mdx
+++ b/website/docs/tailwindcss/ai-friendly-and-demos.mdx
@@ -84,7 +84,7 @@ export function Promo() {
   </TabItem>
   <TabItem value="vue" label="Vue">
 
-```vue
+```html
 <script setup lang="ts">
 import { cva } from 'class-variance-authority'
 import { cn } from '@/lib/utils'
@@ -152,7 +152,7 @@ export function Pill({ className, ...rest }: { className?: string }) {
 }
 ```
 
-```vue title="Vue：cva + data 状态"
+```html title="Vue：cva + data 状态"
 <script setup lang="ts">
 import { cva } from 'class-variance-authority'
 import { cn } from '@/lib/utils'
